2007-08-21  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/hildon-calendar-popup.c: Replacing the "Done" button in the calendar
	popup with "Ok" and "Cancel". Fixes NB#59299.

2007-08-20  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/hildon-calendar.c: Process all window updates before executing next
	timeout. Fixes: NB#54146.

2007-08-17  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	[1.0.13-1 release]

	* NEWS:
	* configure.ac:
	* debian/changelog: Updating.

2007-08-16  Xan Lopez  <xan.lopez@nokia.com>

	* src/hildon-banner.c: (hildon_banner_client_event): connect directly to
	the client event and ignore it, since we use the delete event to close
	after timeouts.

2007-08-16  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/hildon-helper.c: Remove the bogus warning about color not being
	found. Fixes NB#58352.

2007-08-16  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* examples/Makefile.am:
	* examples/hildon-toolbar-seekbar-example.c: Adding an example to test a
	HildonSeekbar widget inside a toolbar.

2007-08-16  Xan Lopez  <xan.lopez@nokia.com>

	* src/hildon-banner.c (hildon_banner_init): mark the banners as
	temporary, depends on maemo-gtk >= 2.10.12-osso7. Also ignore the
	delete event that will come from _GTK_DELETE_TEMPORARIES, as we
	don't want to be closed by non-temporary windows on map.

	Also use G_DEFINE_TYPE instead of manually typed code.

2007-08-06  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	[1.0.12-1 release]

	* NEWS:
	* configure.ac:
	* debian/changelog:
	* debian/rules: Updating.

2007-08-01  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* examples/Makefile.am:
	* examples/hildon-hvolumebar-timer-example.c: Adding an exmaple to debug
	bug NB#61128. Strangely it works.

2007-08-01  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/hildon-date-editor.c: When the date editor entry has been changed